Commit bloque estructura

--- a/index.html
+++ b/index.html
@@ -1,11 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>DawAct1_4 - Módulos DAW</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Modulos de Desarrollo de Aplicaciones Web</h1>
+  <div class="wrap">
+    <article class="card">
+      <header>
+        <h1><strong>DawAct1_4</strong></h1>
+      </header>
+
+      <p class="lead">Una breve descripción del contenido relacionado con los módulos del ciclo DAW.</p>
+
+      <section>
+        <h2>Módulos del Ciclo</h2>
+        <p class="meta">Breve introducción a los módulos que se cursan en el Desarrollo de Aplicaciones Web (DAW).</p>
+
+        <h3>Módulos</h3>
+        <ul class="modules">
+          <li><b>Módulos de Desarrollo de Aplicaciones Web</b></li>
+          <li><b>Despliegue de Aplicaciones Web</b></li>
+          <li><b>Programación</b></li>
+          <li><b>Sistemas Informáticos</b></li>
+          <li><b>Bases de Datos</b></li>
+          <li><b>Diseño de Interfaces Web</b></li>
+          <li><b>Lenguaje de Marcas</b></li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Objetivo</h2>
+        <p class="meta">Explicar brevemente los contenidos principales y competencias desarrolladas en cada módulo.</p>
+      </section>
+
+      <section>
+        <h2>Uso</h2>
+        <p class="meta">Describe aquí cómo se puede utilizar este archivo como guía o referencia para el estudio de los módulos del ciclo DAW.</p>
+      </section>
+
+      <section>
+        <h2>Autores</h2>
+        <p class="meta"><i>Tu nombre aquí</i></p>
+      </section>
+
+      <section>
+        <h2>Licencia</h2>
+        <p class="meta">Este contenido puede ser utilizado libremente con fines educativos.</p>
+      </section>
+    </article>
+  </div>
 </body>
 </html>
